# f1-demo

./: .gitignore  Makefile  app.py  cdk.json  pyproject.toml
cdk/: cdk_stack.py
src/: requirements.txt
src/f1/: app.py  f1_client.py
tests/functional/: conftest.py  test_app.py  test_f1_data.py  test_race_results  test_race_results_for_season  test_race_schedule
