[tool.poetry]
name = "f1-demo"
version = "0.1.0"
description = "F1 demo"
authors = ["Michael Brewer <michael.brewer@gyft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.28"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
aws-lambda-powertools = "^1.17.1"

[tool.poetry.dev-dependencies]
moto = {extras = ["all"], version = "^2.0.10"}
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
rich = "^10.4.0"
vcrpy = "^4.1.1"
mypy = "^0.902"
black = "^21.6b0"
isort = "^5.9.2"
"aws-cdk.core" = "^1.98.0"
"aws-cdk.aws-lambda" = "^1.98.0"
ics = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
line-length = 120
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | example
)
'''